# Zero-Day-Alerts-v2

./: .env.example  LICENSE  README.md  pyproject.toml
configs/: scoring.yaml
src/: config.py  main.py
src/alerts/: __init__.py  email.py  policies.py  router.py  slack.py  webhook.py
src/api/: app.py
src/collectors/: __init__.py  base.py  github_collector.py  http_client.py  osint_feed_collector.py  rss_forum_collector.py  x_collector.py
src/enrichment/: __init__.py  context.py
src/infra/: observability.py  queue.py
src/normalization/: __init__.py  dedupe.py  parser.py  schema.py  store.py
src/scoring/: engine.py  risk.py  rules.py
src/security/: controls.py
src/storage/: __init__.py  models.py  processed_event_store.py  raw_event_store.py
src/storage/migrations/: 001_operational_baseline.sql
src/workers/: processing_pipeline.py  scheduler.py
tests/: test_integration_contracts.py  test_scheduler.py  test_sqlite_event_store.py
tests/scoring/: test_engine.py
