[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zero-day-alerts"
version = "0.1.0"
description = "Zero-day alerts service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "sqlalchemy>=2.0.0",
  "apscheduler>=3.10.4",
  "celery>=5.4.0",
  "httpx>=0.27.0",
  "tenacity>=8.2.3",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.3",
  "redis>=5.0.4",
  "asyncpg>=0.29.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
